# learning_minimal

4p3v/: LICENSE  README.md  testParam.txt  train_nn.py
4p3v/model/: anchors.txt  nn.txt  trainParam.txt
4p3v/src/: CMakeLists.txt  anchors.cxx  connectivity.cxx  data_sampler.cxx  evaluate.cxx  evaluate_T.cxx  homotopy.hxx  labels.cxx
5p2v/: CMakeLists.txt  README.md  sample_data.py  train_nn.py
5p2v/model/: anchors.txt  nn.txt  trainParam.txt
5p2v/src/: .goutputstream-HSFD10  CMakeLists.txt  anchors.cxx  connectivity.cxx  data_sampler.cxx  evaluate.cxx  evaluate_T.cxx  homotopy.hxx  homotopy_nn_ransac.hxx  homotopy_ransac.hxx  labels.cxx  nister_ransac.hxx  ransac.hxx  testing.cpp  testing_nister.cpp
